index.html and script.js files modified

--- a/index.html
+++ b/index.html
@@ -12,13 +12,13 @@
         <h1 id="h11">Login</h1>
     <div id="div1">
         <h3 id="h31">Username</h3>
-        <input type="text" placeholder=" User Name" name="UserName" id="username">
+        <input type="text" placeholder="User Name" name="UserName" id="username" minlength="9" maxlength="9">
     </div>
     <div id="div2">
         <h3 id="h32">Password</h3>
-        <input type="text" placeholder="Password" name="Password" id="password">
+        <input type="text" placeholder="Password" name="Password" id="password" minlength="9" maxlength="9">
     </div>
-        <button type="submit" id="submit" disabled="disabled">Submit</button>
+        <button type="submit" id="submit" name="submit" disabled="disabled">Submit</button>
         <h5 id="warn">Incorrect username or password</h5>
     </form>
     <script src="scripts/script.js"></script>
